# stunning-computing-machine

./: .gitignore  .lldbinit  Cargo.toml  DOCKERFILE  LICENSE  README.md  kernel.ld  run.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yaml
kernel/: kernel.ld
kernel/.cargo/: config.toml
src/: boot.S  lib.rs  linker.rs  main.rs  mmio.rs  sbi.rs
src/board/: mod.rs  qemu_virt.rs
src/memory/: allocation_size_parts.rs  mod.rs
src/no_std/: linker.rs  mod.rs  print_macros.rs
src/uart/: mod.rs  ns16550.rs
