[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
board_qemu_virt = []

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["lazy", "mutex", "spin_mutex"] }

[profile.dev]
debug = true
